--- a/ps_synthetic.ipynb
+++ b/ps_synthetic.ipynb
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def custom_gp_predict(X_train, y_train, X_test, K, iters=1000, lr=1., scaling=2.0, scaling_intercept=0.0):\n",
+    "def custom_gp_predict(X_train, y_train, X_test, K, iters=1000, lr=1., scaling=1.0, scaling_intercept=0.0):\n",
     "\n",
     "    observed = np.arange(X_train.shape[0])\n",
     "    M = np.zeros(X_train.shape[0] + X_test.shape[0])\n",
@@ -237,8 +237,8 @@
     "    z_inferred = torch.zeros(X_train.shape[0] + X_test.shape[0], requires_grad=True)\n",
     "\n",
     "    # trainable parameters for the observation link to z\n",
-    "    scaling = torch.tensor(scaling, requires_grad=True, dtype=torch.float32)\n",
-    "    intercept = torch.tensor(scaling_intercept, requires_grad=True, dtype=torch.float32)\n",
+    "    scaling = torch.tensor(scaling, requires_grad=False, dtype=torch.float32)\n",
+    "    intercept = torch.tensor(scaling_intercept, requires_grad=False, dtype=torch.float32)\n",
     "\n",
     "    optimizer = optim.Adam([z_inferred, scaling, intercept], lr=lr)\n",
     "    observation_matching = nn.MSELoss()\n",
