updated my results

--- a/simple_dk_test2.ipynb
+++ b/simple_dk_test2.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uses uniform sampling rather than preferential sampling to demonstrate that DeepKriging and GPs get similarly good spatial predictions on synthetically-generated data. (We expect, however, that they will perform worse on preferentially-sampled data.)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -571,19 +578,20 @@
     }
    ],
    "source": [
-    "def uniform_sampling(points, n_samples=50):\n",
+    "def uniform_sampling(points, values, n_samples=50):\n",
     "    sampled_indices = np.random.choice(len(points), size=n_samples, replace=False)\n",
-    "    return points[sampled_indices], sampled_indices\n",
+    "    # observed_indices = sampled_indices\n",
+    "    return points[sampled_indices], values[sampled_indices], sampled_indices\n",
     "\n",
-    "sampled_points, sampled_indices = uniform_sampling(grid_points, n_samples=200)\n",
-    "sampled_values = process_values[sampled_indices]\n",
+    "observed_points, observed_values, observed_indices = uniform_sampling(grid_points, process_values, n_samples=200)\n",
+    "non_observed_indices = np.setdiff1d(np.arange(grid_points.shape[0]), observed_indices)\n",
+    "non_observed_points = grid_points[non_observed_indices]\n",
+    "non_observed_values = process_values[non_observed_indices]\n",
     "\n",
-    "# from sklearn.model_selection import train_test_split\n",
-    "from custom_dk_imports import DeepKrigingEmbedding2D, spatial_train_val_test_split\n",
-    "s_train, s_val, s_test, y_train, y_val, y_test = spatial_train_val_test_split(\n",
-    "    s=sampled_points, y=sampled_values, train_size=0.7, val_size=0.15, test_size=0.15, shuffle=True, block_sampling=False\n",
-    ")\n",
-    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "# Split training data into training and validation sets:\n",
+    "s_train, s_val, y_train, y_val = train_test_split(observed_points, observed_values, test_size=0.2, random_state=2023)\n",
+    "s_test = non_observed_points\n",
     "# input_dim = 0  # Only want model to take in basis functions\n",
     "num_hidden_layers = 1\n",
     "hidden_dims = 100\n",
@@ -611,6 +619,7 @@
     "# Convert y_train, y_val, and y_test to torch tensors\n",
     "y_train = torch.tensor(y_train, dtype=torch.float32).view(-1, 1)\n",
     "y_val = torch.tensor(y_val, dtype=torch.float32).view(-1, 1)\n",
+    "y_test = non_observed_values\n",
     "y_test = torch.tensor(y_test, dtype=torch.float32).view(-1, 1)\n",
     "\n",
     "deepkriging_model = DeepKrigingMLP(input_dim, num_hidden_layers, hidden_dims, K=K, activation='relu')\n",
@@ -632,12 +641,16 @@
     "\n",
     "data_generators = {'train': train_loader, 'val': val_loader, 'test': test_loader}\n",
     "\n",
+    "from custom_dk_imports import NewLoss\n",
     "trainer = Trainer(\n",
     "    model=deepkriging_model,\n",
     "    data_generators={'train': train_loader, 'val': val_loader, 'test': test_loader},\n",
     "    optim='adam',\n",
     "    optim_params={'lr': 0.001},\n",
-    "    loss_fn=nn.MSELoss(),\n",
+    "    # loss_fn=NewLoss(phi_train, phi_test, y_train), # CHANGE TO NEW LOSS TO CORRECT FOR PREFERENTIAL SAMPLING\n",
+    "    loss_fn=nn.MSELoss(), # Issue to ask Zach about --- even just using MSE Loss results in a super high RMSE... why??\n",
+    "    # Did I just have overinflated results last time? Why does it perform so much better in simple_dk_test_2 if all I changed was how the \n",
+    "    # training, validation, and test sets were split?\n",
     "    window_size=10,\n",
     "    device=torch.device('cuda' if torch.cuda.is_available() else 'cpu'),\n",
     "    epochs=100,\n",
@@ -650,6 +663,7 @@
     "\n",
     "with torch.no_grad():\n",
     "    y_pred_deepkriging = deepkriging_model(phi_all).cpu().numpy()\n",
+    "    \n",
     "    "
    ]
   },
@@ -905,7 +919,7 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "torch-env",
    "language": "python",
    "name": "python3"
   },
