--- a/dk_with_ps.ipynb
+++ b/dk_with_ps.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
       "\n",
       "Epoch 1/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 5 steps - 10ms/step - loss 3.3620\n",
+      "0s for 5 steps - 2ms/step - loss 3.3620\n",
       "Validation:\n",
       "0s - loss 2.8303\n",
       "\n",
@@ -337,7 +337,7 @@
       "\n",
       "Epoch 12/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 5 steps - 1ms/step - loss 0.1996\n",
+      "0s for 5 steps - 2ms/step - loss 0.1996\n",
       "Validation:\n",
       "0s - loss 0.1874\n",
       "\n",
@@ -355,7 +355,7 @@
       "\n",
       "Epoch 15/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 5 steps - 1ms/step - loss 0.0925\n",
+      "0s for 5 steps - 2ms/step - loss 0.0925\n",
       "Validation:\n",
       "0s - loss 0.1291\n",
       "\n",
@@ -373,7 +373,7 @@
       "\n",
       "Epoch 18/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 5 steps - 2ms/step - loss 0.0383\n",
+      "0s for 5 steps - 4ms/step - loss 0.0383\n",
       "Validation:\n",
       "0s - loss 0.0928\n",
       "\n",
@@ -397,7 +397,7 @@
       "\n",
       "Epoch 22/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 5 steps - 10ms/step - loss 0.0126\n",
+      "0s for 5 steps - 2ms/step - loss 0.0126\n",
       "Validation:\n",
       "0s - loss 0.0688\n",
       "\n",
@@ -451,7 +451,7 @@
       "\n",
       "Epoch 31/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 5 steps - 1ms/step - loss 0.0035\n",
+      "0s for 5 steps - 2ms/step - loss 0.0035\n",
       "Validation:\n",
       "0s - loss 0.0588\n",
       "\n",
@@ -469,7 +469,7 @@
       "\n",
       "Epoch 34/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 5 steps - 2ms/step - loss 0.0031\n",
+      "0s for 5 steps - 12ms/step - loss 0.0031\n",
       "Validation:\n",
       "0s - loss 0.0579\n",
       "\n",
@@ -565,7 +565,7 @@
     "\n",
     "def preferential_sampling(points, values, n_samples=50):\n",
     "    # define the likelihood of sampling a location as a function of its value\n",
-    "    probabilities = softmax(true_scaling*values + true_intercept)\n",
+    "    probabilities = softmax(true_scaling*values + true_intercept) # abs value of values?\n",
     "    # Points with higher probabilities (derived from higher values) are more likely to be sampled\n",
     "    sampled_indices = np.random.choice(len(points), size=n_samples, p=probabilities, replace=False)\n",
     "    # observed_indices = sampled_indices\n",
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
        "(2500, 1)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
        "(2500, 1)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -769,16 +769,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x156e68e60>"
+       "<matplotlib.colorbar.Colorbar at 0x1562ba720>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
        "1.2840388369955922"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,16 +825,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x156e9e0c0>"
+       "<matplotlib.colorbar.Colorbar at 0x1574d2c60>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -899,10 +899,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# pref sample more points on both extreme positive and negative values\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
