update dk_with_ps intro

--- a/dk_with_ps.ipynb
+++ b/dk_with_ps.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Same thing as simple_dk_test2, but this time with preferentially sampled data\n",
+    "### DeepKriging with Preferential Sampling Adjustment\n",
     "\n",
-    "This time, we will try to adjust for preferential sampling by changing the loss function."
+    "We will test our pref-sampling adjustment (new loss function in DeepKriging) on a 50x50 grid of synthetic data."
    ]
   },
   {
