--- a/dk_with_ps.ipynb
+++ b/dk_with_ps.ipynb
@@ -194,6 +194,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(2000, 2)\n",
       "phi_train mean: 0.003119455184787512, std: 0.03994273766875267\n",
       "phi_train min: 0.0, max: 1.0\n"
      ]
@@ -222,147 +223,81 @@
       "\n",
       "Epoch 1/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 63 steps - 3ms/step - loss 0.8343\n",
+      "0s for 63 steps - 5ms/step - loss 0.8533\n",
       "Validation:\n",
-      "0s - loss 0.5939\n",
+      "0s - loss 0.5872\n",
       "\n",
       "Epoch 2/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 63 steps - 2ms/step - loss 0.4833\n",
+      "0s for 63 steps - 3ms/step - loss 0.4905\n",
       "Validation:\n",
-      "0s - loss 0.5467\n",
+      "0s - loss 0.5444\n",
       "\n",
       "Epoch 3/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 63 steps - 3ms/step - loss 0.4661\n",
+      "0s for 63 steps - 2ms/step - loss 0.4685\n",
       "Validation:\n",
-      "0s - loss 0.5462\n",
+      "0s - loss 0.5429\n",
       "\n",
       "Epoch 4/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 63 steps - 2ms/step - loss 0.4743\n",
+      "0s for 63 steps - 4ms/step - loss 0.4651\n",
       "Validation:\n",
-      "0s - loss 0.5463\n",
+      "0s - loss 0.5473\n",
       "\n",
       "Epoch 5/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 63 steps - 2ms/step - loss 0.4657\n",
-      "Validation:\n",
-      "0s - loss 0.5464\n",
-      "\n",
-      "Epoch 6/100\n",
-      "Learning rate: 0.001000\n",
-      "0s for 63 steps - 4ms/step - loss 0.4646\n",
-      "Validation:\n",
-      "0s - loss 0.5451\n",
-      "\n",
-      "Epoch 7/100\n",
-      "Learning rate: 0.001000\n",
-      "0s for 63 steps - 2ms/step - loss 0.4715\n",
-      "Validation:\n",
-      "0s - loss 0.5477\n",
-      "\n",
-      "Epoch 8/100\n",
-      "Learning rate: 0.001000\n",
-      "0s for 63 steps - 1ms/step - loss 0.4642\n",
+      "0s for 63 steps - 2ms/step - loss 0.4625\n",
       "Validation:\n",
       "0s - loss 0.5450\n",
       "\n",
+      "Epoch 6/100\n",
+      "Learning rate: 0.001000\n",
+      "0s for 63 steps - 2ms/step - loss 0.4585\n",
+      "Validation:\n",
+      "0s - loss 0.5456\n",
+      "\n",
+      "Epoch 7/100\n",
+      "Learning rate: 0.001000\n",
+      "0s for 63 steps - 6ms/step - loss 0.4641\n",
+      "Validation:\n",
+      "0s - loss 0.5447\n",
+      "\n",
+      "Epoch 8/100\n",
+      "Learning rate: 0.001000\n",
+      "0s for 63 steps - 4ms/step - loss 0.4671\n",
+      "Validation:\n",
+      "0s - loss 0.5471\n",
+      "\n",
       "Epoch 9/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 63 steps - 2ms/step - loss 0.4581\n",
+      "0s for 63 steps - 2ms/step - loss 0.4567\n",
       "Validation:\n",
-      "0s - loss 0.5479\n",
+      "0s - loss 0.5470\n",
       "\n",
       "Epoch 10/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 63 steps - 3ms/step - loss 0.4631\n",
+      "0s for 63 steps - 2ms/step - loss 0.4693\n",
       "Validation:\n",
-      "0s - loss 0.5464\n",
+      "0s - loss 0.5461\n",
       "\n",
       "Epoch 11/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 63 steps - 2ms/step - loss 0.4669\n",
+      "0s for 63 steps - 2ms/step - loss 0.4648\n",
       "Validation:\n",
-      "0s - loss 0.5469\n",
+      "0s - loss 0.5447\n",
       "\n",
       "Epoch 12/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 63 steps - 1ms/step - loss 0.4578\n",
-      "Validation:\n",
-      "0s - loss 0.5467\n",
-      "\n",
-      "Epoch 13/100\n",
-      "Learning rate: 0.001000\n",
-      "0s for 63 steps - 3ms/step - loss 0.4615\n",
-      "Validation:\n",
-      "0s - loss 0.5463\n",
-      "\n",
-      "Epoch 14/100\n",
-      "Learning rate: 0.001000\n",
-      "0s for 63 steps - 2ms/step - loss 0.4604\n",
+      "0s for 63 steps - 4ms/step - loss 0.4546\n",
       "Validation:\n",
       "0s - loss 0.5449\n",
       "\n",
-      "Epoch 15/100\n",
+      "Epoch 13/100\n",
       "Learning rate: 0.001000\n",
-      "0s for 63 steps - 2ms/step - loss 0.4597\n",
+      "0s for 63 steps - 6ms/step - loss 0.4668\n",
       "Validation:\n",
       "0s - loss 0.5452\n",
-      "\n",
-      "Epoch 16/100\n",
-      "Learning rate: 0.001000\n",
-      "0s for 63 steps - 2ms/step - loss 0.4586\n",
-      "Validation:\n",
-      "0s - loss 0.5482\n",
-      "\n",
-      "Epoch 17/100\n",
-      "Learning rate: 0.001000\n",
-      "0s for 63 steps - 2ms/step - loss 0.4632\n",
-      "Validation:\n",
-      "0s - loss 0.5457\n",
-      "\n",
-      "Epoch 18/100\n",
-      "Learning rate: 0.001000\n",
-      "0s for 63 steps - 2ms/step - loss 0.4598\n",
-      "Validation:\n",
-      "0s - loss 0.5480\n",
-      "\n",
-      "Epoch 19/100\n",
-      "Learning rate: 0.001000\n",
-      "0s for 63 steps - 2ms/step - loss 0.4589\n",
-      "Validation:\n",
-      "0s - loss 0.5496\n",
-      "\n",
-      "Epoch 20/100\n",
-      "Learning rate: 0.001000\n",
-      "0s for 63 steps - 1ms/step - loss 0.4679\n",
-      "Validation:\n",
-      "0s - loss 0.5482\n",
-      "\n",
-      "Epoch 21/100\n",
-      "Learning rate: 0.001000\n",
-      "0s for 63 steps - 1ms/step - loss 0.4611\n",
-      "Validation:\n",
-      "0s - loss 0.5477\n",
-      "\n",
-      "Epoch 22/100\n",
-      "Learning rate: 0.001000\n",
-      "0s for 63 steps - 1ms/step - loss 0.4565\n",
-      "Validation:\n",
-      "0s - loss 0.5482\n",
-      "\n",
-      "Epoch 23/100\n",
-      "Learning rate: 0.001000\n",
-      "0s for 63 steps - 1ms/step - loss 0.4591\n",
-      "Validation:\n",
-      "0s - loss 0.5500\n",
-      "\n",
-      "Epoch 24/100\n",
-      "Learning rate: 0.001000\n",
-      "0s for 63 steps - 1ms/step - loss 0.4618\n",
-      "Validation:\n",
-      "0s - loss 0.5491\n",
       "\n",
       "Early stopping - patience reached\n",
       "Restoring the best model\n"
@@ -390,12 +325,10 @@
     "\n",
     "# Instantiate the embedding layer\n",
     "embedding_layer = DeepKrigingEmbedding3d(K)\n",
-    "input_dim = sum(embedding_layer.num_basis)  # This should match 1830\n",
+    "input_dim = sum(embedding_layer.num_basis)\n",
     "\n",
     "# Convert numpy arrays to torch tensors\n",
     "s_train_tensor = torch.tensor(s_train, dtype=torch.float32)\n",
-    "\n",
-    "print(s_train.shape)\n",
     "s_val_tensor = torch.tensor(s_val, dtype=torch.float32)\n",
     "s_test_tensor = torch.tensor(s_test, dtype=torch.float32)\n",
     "s_all_tensor = torch.tensor(grid_points, dtype=torch.float32)\n",
