fixed some typos

--- a/ps_on_durham/dk_ps_durham.ipynb
+++ b/ps_on_durham/dk_ps_durham.ipynb
@@ -16,6 +16,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(109, 76)\n",
+      "float32\n",
+      "8196\n",
+      "88\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print how many NaN data points in july2023_eve.npy:\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "data = np.load('july2023_eve.npy')\n",
+    "\n",
+    "print(data.shape)\n",
+    "print(data.dtype)\n",
+    "\n",
+    "nan_count = np.sum(np.isnan(data))\n",
+    "print(nan_count)\n",
+    "\n",
+    "# print number of non-Nan points:\n",
+    "print(np.prod(data.shape) - nan_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
