--- a/ps_on_nc/rasterizing_nc_data.ipynb
+++ b/ps_on_nc/rasterizing_nc_data.ipynb
@@ -139,7 +139,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x14055e3c0>"
+       "<matplotlib.collections.PathCollection at 0x13b3d83e0>"
       ]
      },
      "execution_count": 3,
@@ -13565,8 +13565,8 @@
     "# Plot the cropped data\n",
     "plt.figure(figsize=(36, 30))\n",
     "\n",
-    "temp_data[temp_data == 0] = np.nan\n",
-    "temp_data[temp_data == -9999] = np.nan\n",
+    "cropped_data[cropped_data == 0] = np.nan\n",
+    "cropped_data[cropped_data == -9999] = np.nan\n",
     "\n",
     "cmap = plt.cm.viridis.copy()\n",
     "cmap.set_bad(color=\"white\")  # Set NaN areas to white\n",
@@ -13587,7 +13587,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overall data vmin: 18.887096774193548, vmax: 59.16451612903226\n"
+      "Overall data vmin: 0.0, vmax: 59.16451612903226\n"
      ]
     },
     {
@@ -13607,6 +13607,9 @@
     "vmin = np.nanmin(temp_data)\n",
     "vmax = np.nanmax(temp_data)\n",
     "print(f\"Overall data vmin: {vmin}, vmax: {vmax}\")\n",
+    "\n",
+    "temp_data[temp_data == 0] = np.nan\n",
+    "temp_data[temp_data == -9999] = np.nan\n",
     "\n",
     "plt.figure(figsize=(36, 30))\n",
     "plt.imshow(temp_data, cmap=cmap, vmin=20, vmax=30)\n",
@@ -13653,6 +13656,67 @@
     "print(f\"Count of zero cells: {np.count_nonzero(temp_data == 0.0)}\")\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's convert the rasterized TIF file into a numpy file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert nc_temp_500m.tif to npy:\n",
+    "\n",
+    "import rasterio as rio\n",
+    "import numpy as np\n",
+    "\n",
+    "# Before saving the data, we need to set the zero and -9999 values to NaN:\n",
+    "with rio.open('nc_temp_500m.tif') as src:\n",
+    "    temp_data = src.read(1)\n",
+    "    profile = src.profile\n",
+    "\n",
+    "temp_data[temp_data == 0] = np.nan\n",
+    "temp_data[temp_data == -9999] = np.nan\n",
+    "\n",
+    "# Save the data as a numpy array\n",
+    "np.save('nc_temp_500m.npy', temp_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(744, 1927)\n",
+      "float64\n",
+      "1431726\n",
+      "1962\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Open up the npy file and check the data:\n",
+    "\n",
+    "np_data = np.load('nc_temp_500m.npy')\n",
+    "\n",
+    "print(np_data.shape)\n",
+    "print(np_data.dtype)\n",
+    "\n",
+    "nan_count = np.sum(np.isnan(np_data))\n",
+    "print(nan_count)\n",
+    "\n",
+    "# print number of non-Nan points:\n",
+    "print(np.prod(np_data.shape) - nan_count)"
    ]
   },
   {
